modulo-03-instalacion/k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: border-travel
  labels:
    app: border-travel
    environment: development
