modulo-03-instalacion/k8s/06-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: border-travel-api
  namespace: border-travel
  labels:
    app: border-travel
    component: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: border-travel
      component: api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: border-travel
        component: api
    spec:
      containers:
        - name: api
          image: nginx:1.27-alpine
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: border-travel
  labels:
    app: border-travel
    component: api
spec:
  type: ClusterIP
  selector:
    app: border-travel
    component: api
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
