modulo-03-instalacion/k8s/08-ingress.yaml
# Requiere instalar el Ingress Controller de NGINX en Kind:
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/kind/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: border-travel-ingress
  namespace: border-travel
  labels:
    app: border-travel
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: border-travel.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: app-svc
                port:
                  number: 8080
